// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Project DBML {
  Note: '''
CampaignEvent: Represents campaign events organized by candidates.
Candidate: Represents candidates in the looney tunes presidential election.
Party: Represents political parties in the election.
Debate: Represents debates between candidates.
DebateParticipant: Represents candidates participating in a debate.
District: Represents electoral districts.
Election: Represents elections held at specific times.
ElectionResult: Represents the result of an election for a candidate.
MediaAppearance: Represents media appearances made by candidates.
Sponsorship: Represents sponsorship offers to candidates or parties.
Vote: Represents individual votes cast in an election.
Voter: Represents registered voters.
'''
}

Table CampaignEvent {
    id INTEGER [primary key]
    candidate_id INTEGER 
    date_held DATETIME 
    location VARCHAR 
    }

Table Candidate {
    id INTEGER [primary key]
    name VARCHAR 
    party_id INTEGER 
    speech TEXT 
    }

Table Party {
    id INTEGER [primary key]
    name VARCHAR 
    slogan VARCHAR 
    }

Table Debate {
    id INTEGER [primary key]
    scheduled_date DATETIME 
    location VARCHAR 
    }

Table DebateParticipant {
    id INTEGER [primary key]
    debate_id INTEGER 
    candidate_id INTEGER 
    }

Table District {
    id INTEGER [primary key]
    name VARCHAR 
    region VARCHAR 
    }

Table Election {
    id INTEGER [primary key]
    date_held DATETIME 
    location VARCHAR 
    }

Table ElectionResult {
    id INTEGER [primary key]
    election_id INTEGER 
    candidate_id INTEGER 
    votes_received INTEGER 
    }

Table MediaAppearance {
    id INTEGER [primary key]
    candidate_id INTEGER 
    media_name VARCHAR 
    appearance_date DATETIME 
    }

Table Sponsorship {
    id INTEGER [primary key]
    sponsor_name VARCHAR 
    candidate_id INTEGER 
    party_id INTEGER 
    }

Table Vote {
    id INTEGER [primary key]
    election_id INTEGER 
    candidate_id INTEGER 
    voter_id INTEGER 
    }

Table Voter {
    id INTEGER [primary key]
    name VARCHAR 
    district_id INTEGER 
    }



// Relationships
    Ref: CampaignEvent.(candidate_id) < Candidate.(id)
    Ref: Candidate.(party_id) < Party.(id)
    Ref: DebateParticipant.(candidate_id) < Candidate.(id)
    Ref: DebateParticipant.(debate_id) < Debate.(id)
    Ref: ElectionResult.(candidate_id) < Candidate.(id)
    Ref: ElectionResult.(election_id) < Election.(id)
    Ref: MediaAppearance.(candidate_id) < Candidate.(id)
    Ref: Sponsorship.(candidate_id) < Candidate.(id)
    Ref: Sponsorship.(party_id) < Party.(id)
    Ref: Vote.(candidate_id) < Candidate.(id)
    Ref: Vote.(election_id) < Election.(id)
    Ref: Vote.(voter_id) < Voter.(id)
    Ref: Voter.(district_id) < District.(id)
